--- a/trunk/ prova2-programacao-web/progWebProva2/WebContent/resources/styles/style.css
+++ b/trunk/ prova2-programacao-web/progWebProva2/WebContent/resources/styles/style.css
@@ -121,8 +121,46 @@ li ul li ul {
 	list-style: circle none;
 }
 
-/* table elements */
+/* table consulta */
+table.consulta {
+	background: #EEEEEE;
+	margin: 2px 0 0 0;
+	border: none;
+	border-collapse: collapse;
+}
 
+table.consulta table.consulta {
+	margin: -5px 0;
+	border: 0px solid #000000;
+	width: 100%;
+}
+
+table.consulta td.consulta{
+	padding: 2px;
+	border: none;
+}
+
+table.consulta th.consulta {
+	border-left: 1px none #000000;
+	height: 15px;
+	padding: 2px;
+	}
+
+table th.consulta {
+	font-size: 11px;
+	text-align: left;
+	font-weight: bold;
+	color: #fff;
+}
+
+table thead.consulta {
+	font-weight: bold;
+	font-style: italic;
+	background-color: #688B9A;
+	text-transform: uppercase;	
+}
+
+/*Tabela de elementos*/
 table {
 	background: #EEEEEE;
 	margin: 2px 0 0 0;
